# appservice-prebuildcmd

./: .gitignore  README.md  azure.yaml
.devcontainer/: devcontainer.json
infra/: resources.bicep
poetry-demo/: app.py  poet-prebuild.sh  pyproject.toml  requirements.txt
src/: prebuild.sh  pyproject.toml
uv-demo/: prebuild.sh
