[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Gwyneth Pena-Siguenza <gwynethpena@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.115.10"
gunicorn = "^23.0.0"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"